fix: resolve 403 login error, routing issues, and code quality warnings
Backend Changes:
- Removed @CrossOrigin annotations from all controllers (conflicted with global CORS)
- Updated SecurityConfig to use setAllowedOriginPatterns for flexible localhost CORS
- Removed unused imports: HashMap, Map from AuthController
- Removed unused imports: CsvException, SecretKeySpec, SecureRandom, DateTimeFormatter
- Removed unused constants: BITMAP_SIZE, EXTENDED_BITMAP_SIZE from ISO8583Parser
- Enhanced CORS config to allow all localhost ports and cache preflight requests

Frontend Changes:
- Fixed Login.jsx bug: removed undefined response.data.token reference
- Added proper try-catch-finally for loading state management
- Fixed AuthContext to properly initialize from localStorage on mount
- Updated App.jsx with PublicRoute and PrivateRoute loading states
- Prevented dashboard flash on page load when not authenticated
- Added proper navigation redirects with replace flag

Security Improvements:
- Global CORS configuration now properly handles all HTTP methods
- Removed redundant @CrossOrigin that bypassed security config
- Proper loading state prevents unauthorized access attempts

These changes fix:
- 403 Forbidden error on login endpoint
- Dashboard showing before auth check completes
- Login page loading state never clearing
- CORS preflight request failures
- Code quality warnings and unused imports